// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Tabs Controlled behaviour 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c6 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c6::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c8 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c10 {
  height: 100%;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c2 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <button
    onClick={[Function]}
    type="button"
  >
    Change state outside
  </button>
  <ul
    className="c1 c2"
    direction="row"
    role="tablist"
  >
    <li
      className="c3"
      role="presentation"
    >
      <span
        className="c4"
      >
        <button
          active={true}
          aria-selected={true}
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="c6"
            height={8}
          >
            One
          </span>
        </button>
      </span>
    </li>
    <li
      className="c3"
      role="presentation"
    >
      <span
        className="c0"
      >
        <button
          active={false}
          aria-selected={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c7"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c8"
            height={8}
          >
            Two
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c9"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c10"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    Ones children
  </section>
</span>
`;

exports[`Storyshots Molecules / Tabs Default 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c6 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c6::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c8 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c10 {
  height: 100%;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c2 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <ul
    className="c1 c2"
    direction="row"
    role="tablist"
  >
    <li
      className="c3"
      role="presentation"
    >
      <span
        className="c4"
      >
        <button
          active={true}
          aria-selected={true}
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="c6"
            height={8}
          >
            One
          </span>
        </button>
      </span>
    </li>
    <li
      className="c3"
      role="presentation"
    >
      <span
        className="c0"
      >
        <button
          active={false}
          aria-selected={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c7"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c8"
            height={8}
          >
            <div>
              Node as well
              <span
                aria-label="goodjob"
                role="img"
              >
                👍
              </span>
            </div>
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c9"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c10"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    Ones children
  </section>
</span>
`;

exports[`Storyshots Molecules / Tabs Large variant 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c6 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
}

.c6::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c8 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c10 {
  height: 100%;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c2 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <ul
    className="c1 c2"
    direction="row"
    role="tablist"
  >
    <li
      className="c3"
      role="presentation"
    >
      <span
        className="c4"
      >
        <button
          active={true}
          aria-selected={true}
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="c6"
            height={8}
          >
            One
          </span>
        </button>
      </span>
    </li>
    <li
      className="c3"
      role="presentation"
    >
      <span
        className="c0"
      >
        <button
          active={false}
          aria-selected={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c7"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c8"
            height={8}
          >
            <div>
              Node as well
              <span
                aria-label="goodjob"
                role="img"
              >
                👍
              </span>
            </div>
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c9"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c10"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    Ones children
  </section>
</span>
`;

exports[`Storyshots Molecules / Tabs With conditionally hidden tab 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c7 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c6 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c3 {
  padding: 0 20px;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c2 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <ul
    className="c1 c2 c3"
    direction="row"
    role="tablist"
  >
    <li
      className="c4"
      role="presentation"
    >
      <span
        className="c0"
      >
        <button
          active={false}
          aria-selected={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c6"
            height={8}
          >
            two
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c7"
  />
</span>
`;

exports[`Storyshots Molecules / Tabs With custom styling (like spacing) 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c10 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c7 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c7::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c9 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c11 {
  height: 100%;
}

.c12 {
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 16px;
}

.c3 {
  padding: 0 20px;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c2 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <ul
    className="c1 c2 c3"
    direction="row"
    role="tablist"
  >
    <li
      className="c4"
      role="presentation"
    >
      <span
        className="c5"
      >
        <button
          active={true}
          aria-selected={true}
          className="NormalizedButton__Button-sc-ey7f5x-0 c6"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="c7"
            height={8}
          >
            One
          </span>
        </button>
      </span>
    </li>
    <li
      className="c4"
      role="presentation"
    >
      <span
        className="c0"
      >
        <button
          active={false}
          aria-selected={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c8"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c9"
            height={8}
          >
            two
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c10"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c11"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    <div
      className="c12"
    >
      Ones children
    </div>
  </section>
</span>
`;

exports[`Storyshots Molecules / Tabs With height modified 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c6 {
  height: 44px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c6::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c8 {
  height: 44px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c10 {
  height: 100%;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c2 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <ul
    className="c1 c2"
    direction="row"
    role="tablist"
  >
    <li
      className="c3"
      role="presentation"
    >
      <span
        className="c4"
      >
        <button
          active={true}
          aria-selected={true}
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="c6"
            height={11}
          >
            One
          </span>
        </button>
      </span>
    </li>
    <li
      className="c3"
      role="presentation"
    >
      <span
        className="c0"
      >
        <button
          active={false}
          aria-selected={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c7"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c8"
            height={11}
          >
            two
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c9"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c10"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    Ones children
  </section>
</span>
`;

exports[`Storyshots Molecules / Tabs With styled tab content 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c10 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c7 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c7::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c9 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c12 {
  height: 100%;
}

.c3 ~ .c11 {
  height: inherit;
  background: #EBEBE8;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c2 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <ul
    className="c1 c2 c3"
    direction="row"
    role="tablist"
  >
    <li
      className="c4"
      role="presentation"
    >
      <span
        className="c5"
      >
        <button
          active={true}
          aria-selected={true}
          className="NormalizedButton__Button-sc-ey7f5x-0 c6"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="c7"
            height={8}
          >
            One
          </span>
        </button>
      </span>
    </li>
    <li
      className="c4"
      role="presentation"
    >
      <span
        className="c0"
      >
        <button
          active={false}
          aria-selected={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c8"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c9"
            height={8}
          >
            Two
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c10"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c11 c12"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    Tab 1. Content have gray background
  </section>
</span>
`;
